--- a/config/field.field.node.announcement.field_summary.yml
+++ b/config/field.field.node.announcement.field_summary.yml
@@ -3,7 +3,6 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_summary
-    - filter.format.summary_fields
     - node.type.announcement
   module:
     - text
@@ -17,7 +16,5 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings:
-  allowed_formats:
-    - summary_fields
+settings: {  }
 field_type: text_long
